# telegram-virtual-casino-bot

./: .dockerignore  .editorconfig  .env.dist  .gitignore  Dockerfile  LICENCE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py
bot/core/: __init__.py  factory.py  runner.py
bot/core/factory/: __init__.py  bot.py  dispatcher.py  setup.py
bot/core/runtime/: __init__.py  polling.py  runner.py
bot/enums/: __init__.py  back.py  callback.py  callback_data.py  game.py  locale.py  menu.py  operation.py
bot/handlers/: __init__.py  common.py  game.py  menu.py
bot/handlers/callbacks/: __init__.py  factories.py  game.py  menu.py
bot/handlers/common/: __init__.py  game.py  help.py  language.py  menu.py  start.py
bot/keyboards/: __init__.py  factory.py  inline.py
bot/keyboards/inline/: __init__.py  main.py
bot/middlewares/: __init__.py
bot/middlewares/inner/: __init__.py  throttling.py
bot/middlewares/outer/: __init__.py  database.py  i18n.py  user.py
bot/misc/: __init__.py  _calculate_game.py  calculate_game.py  operation.py  result_game.py
bot/services/database/: __init__.py  context.py  create_pool.py  uow.py
bot/services/database/models/: __init__.py  base.py  user.py
bot/services/database/repositories/: __init__.py  base.py  general.py  user.py
bot/utils/: __init__.py  logging.py
locales/en/: messages.ftl
locales/ja/: messages.ftl
locales/uk/: messages.ftl
migrations/: env.py
migrations/versions/: 001_create_table.py
scripts/: docker-entrypoint.sh
